--- a/.travis.yml
+++ b/.travis.yml
@@ -25,3 +25,6 @@ before_script:
   - android-wait-for-emulator
   - sleep 10
   - adb shell input keyevent 82
+
+notifications:
+  slack: conference-chat:G5uNTw0TmKDiRBIdXkcXKVDj
