--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <meta-data
+            android:name="io.fabric.ApiKey"
+            android:value="d014d00b2c814ab153602fa0e7635db8a77e71e7" />
     </application>
 
+    <uses-permission android:name="android.permission.INTERNET" />
 </manifest>
