--- a/.travis.yml
+++ b/.travis.yml
@@ -26,5 +26,8 @@ before_script:
   - sleep 10
   - adb shell input keyevent 82
 
+after_script:
+  - ./gradlew crashlyticsUploadDistributionDebug
+
 notifications:
   slack: conference-chat:G5uNTw0TmKDiRBIdXkcXKVDj
