--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,6 +27,9 @@ android {
         versionName "1.0"
     }
     buildTypes {
+        debug {
+            ext.betaDistributionGroupAliases="Testers"
+        }
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
