--- a/.travis.yml
+++ b/.travis.yml
@@ -26,8 +26,10 @@ before_script:
   - sleep 10
   - adb shell input keyevent 82
 
-after_script:
+after_success:
   - ./gradlew crashlyticsUploadDistributionDebug
-
+  - mkdir -p app/build/reports/jacoco/test/
+  - cp app/build/reports/coverage/debug/report.xml app/build/reports/jacoco/test/jacocoTestReport.xml
+  - ./gradlew coveralls
 notifications:
   slack: conference-chat:G5uNTw0TmKDiRBIdXkcXKVDj
