--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,16 +1,21 @@
 buildscript {
     repositories {
+        jcenter()
         maven { url 'https://maven.fabric.io/public' }
     }
 
     dependencies {
         classpath 'io.fabric.tools:gradle:1.+'
+        classpath 'org.kt3k.gradle.plugin:coveralls-gradle-plugin:2.5.0-x'
     }
 }
 apply plugin: 'com.android.application'
 apply plugin: 'io.fabric'
+apply plugin: 'jacoco'
+apply plugin: 'com.github.kt3k.coveralls'
 
 repositories {
+    jcenter()
     maven { url 'https://maven.fabric.io/public' }
 }
 
@@ -28,6 +33,7 @@ android {
     }
     buildTypes {
         debug {
+            testCoverageEnabled true
             ext.betaDistributionGroupAliases="Testers"
         }
         release {
