Added test coverage

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,7 @@ android {
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
+        testInstrumentationRunner 'android.support.test.runner.AndroidJUnitRunner'
     }
     buildTypes {
         debug {
@@ -50,5 +51,8 @@ dependencies {
     compile 'com.android.support:design:23.2.1'
     compile('com.crashlytics.sdk.android:crashlytics:2.5.5@aar') {
         transitive = true;
+    }
+    androidTestCompile("com.android.support.test.espresso:espresso-core:2.2.2") {
+        exclude group: 'com.android.support'
     }
 }
